# music-classification-pytorch

./: .gitignore  README.md  music_classification.ipynb  pyproject.toml
